Fix Free Quote rounded corner on small screens

--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -64,6 +64,9 @@
       font-weight: 600;
       letter-spacing: 0.02em;
     }
+    @include mq($until: tablet) {
+      border-radius: 0;
+    }
   }
 }
 
